Added precipitation and wind from api

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           </div>
           <div class="col-6">
             <ul>
-              <li class="example">Precipitation: 0%</li>
-              <li>Humidity: 77%</li>
-              <li>Wind: 8km/h</li>
+              <li>Precipitation:0%</li>
+              <li>Humidity:<span id="humidity">77</span>%</li>
+              <li>Wind: <span id="wind">8</span>km/h</li>
             </ul>
           </div>
         </div>
@@ -132,6 +132,22 @@
               alt="cloudy"
             />
           </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="row">
+          <footer>
+            <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a
+                  href="https://github.com/achonu/weather-app"
+                  target="_blank"
+                  class="text-center"
+                  >Open-source code by Adanna Achonu</a
+                >
+              </li>
+            </ul>
+          </footer>
         </div>
       </div>
     </div>
