Added weather description

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Las Vegas, NV, USA</h1>
         <ul>
           <li id="date">Saturday 07:49</li>
-          <li>Mostly Cloudy</li>
+          <li id="description">Mostly Cloudy</li>
         </ul>
         <div class="row">
           <!---one row 2 cols 6 each-->
@@ -70,7 +70,6 @@
           </div>
           <div class="col-6">
             <ul>
-              <li>Precipitation:0%</li>
               <li>Humidity:<span id="humidity">77</span>%</li>
               <li>Wind: <span id="wind">8</span>km/h</li>
             </ul>
