Removed fake data

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </div>
           </div>
         </form>
-        <h1>Las Vegas, NV, USA</h1>
+        <h1></h1>
         <ul>
           <li id="date">Saturday 07:49</li>
-          <li id="description">Mostly Cloudy</li>
+          <li id="description"></li>
         </ul>
         <div class="row">
           <!---one row 2 cols 6 each-->
@@ -60,18 +60,14 @@
                 class="weather-icon float-left"
               />
               <div class="float-left">
-                <span class="temperature">19</span
-                ><span class="units"
-                  ><a href="#" class="celsius" id="celsius-link">°C</a> |
-                  <a href="#" class="farenheit" id="farenheit-link">°F</a></span
-                >
+                <span class="temperature"></span>
               </div>
             </div>
           </div>
           <div class="col-6">
             <ul>
-              <li>Humidity:<span id="humidity">77</span>%</li>
-              <li>Wind: <span id="wind">8</span>km/h</li>
+              <li>Humidity:<span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span>km/h</li>
             </ul>
           </div>
         </div>
@@ -125,11 +121,6 @@
           <div class="col-2">
             <div>Sun</div>
             <div>15°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
           </div>
         </div>
       </div>
