--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 type="submit"
                 value="Current"
                 class="form-control btn btn-lg shadow btn-primary"
-                id="current-input"
+                id="current-location-btn"
               />
             </div>
           </div>
@@ -54,13 +54,9 @@
           <!---one row 2 cols 6 each-->
           <div class="col-6">
             <div class="d-flex">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="cloudy icon"
-                class="weather-icon float-left"
-              />
               <div class="float-left">
                 <span class="temperature"></span>
+                <span class="units"> °C </span>
               </div>
             </div>
           </div>
@@ -121,6 +117,11 @@
           <div class="col-2">
             <div>Sun</div>
             <div>15°</div>
+            <img
+              class="icons"
+              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+              alt="cloudy"
+            />
           </div>
         </div>
       </div>
