--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-6">
               <input
                 type="search"
-                placeholder="Type a city..."
+                placeholder="Type in a city..."
                 class="form-control"
                 autofocus="on"
                 id="search_input"
@@ -47,7 +47,7 @@
         </form>
         <h1></h1>
         <ul>
-          <li id="date">Saturday 07:49</li>
+          <li id="date"></li>
           <li id="description"></li>
         </ul>
         <div class="row">
@@ -65,63 +65,6 @@
               <li>Humidity:<span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span>km/h</li>
             </ul>
-          </div>
-        </div>
-        <hr />
-        <div class="row">
-          <div class="col-2">
-            <div>Tues</div>
-            <div>12°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-2">
-            <div>Wed</div>
-            <div>10°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-2">
-            <div>Thurs</div>
-            <div>13°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-2">
-            <div>Fri</div>
-            <div>13°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-2">
-            <div>Sat</div>
-            <div>9°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
-          </div>
-          <div class="col-2">
-            <div>Sun</div>
-            <div>15°</div>
-            <img
-              class="icons"
-              src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-              alt="cloudy"
-            />
           </div>
         </div>
       </div>
