--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
           <!---one row 2 cols 6 each-->
           <div class="col-6">
             <div class="d-flex">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                alt="cloudy icon"
+                class="weather-icon float-left"
+              />
               <div class="float-left">
                 <span class="temperature"></span>
                 <span class="units"> °C </span>
